test/errmsg/zero-size-array.cc
// zero-size-array.cc
// Array declared to have zero size.

int arr0[0];

// EOF
